Archive2/7b/e310114c36096d/output
main.cpp:1:26: error: 'Inner' does not name a type
       AnotherInner(const Inner& inner) : inner(inner) {
                          ^
main.cpp:1:38: error: ISO C++ forbids declaration of 'AnotherInner' with no type [-fpermissive]
       AnotherInner(const Inner& inner) : inner(inner) {
                                      ^
main.cpp: In function 'int AnotherInner(const int&)':
main.cpp:1:42: error: only constructors take member initializers
       AnotherInner(const Inner& inner) : inner(inner) {
                                          ^
main.cpp:2:4: warning: no return statement in function returning non-void [-Wreturn-type]
    }  
    ^
