Archive2/7b/e310114c36096d/main.cpp
    		AnotherInner(const Inner& inner) : inner(inner) {
			}		
